<resources>
    <string name="app_name">AndroidTraining2</string>
    <!--login scream -->
    <string name="label_login">Identificación de Usuarios</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="action_validate">Validar</string>

    <string name="message_login_ok">Las credenciales son correctas</string>
    <string name="message_login_fails">Las credenciales  no son correctas</string>
    <string name="label_remember_username">Recordar username</string>
    <string name="label_remeber_username">Recordar username</string>

</resources>