<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.login.presentation.LoginActivity">
    <TextView
        android:text="@string/label_login"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/label_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText

        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"/>
    <TextView
        android:text="@string/label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/input_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"/>
    <CheckBox
        android:text="@string/label_remember_username"
        android:id="@+id/check_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>asd

    <Button
        android:id="@+id/action_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_validate" />



</LinearLayout>